# clap-wrapper

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  clangformat  x
.github/workflows/: code-checks.yml  pullreq.yml
cli/: CMakeLists.txt  README.md
cli/src/: main.cpp
cmake/: AAX_Info.plist.in  auv2_Info.plist.in  base_sdks.cmake  enable_sdks.cmake  macBundlePkgInfoAAX  make_clapfirst.cmake  shared_prologue.cmake  top_level_default.cmake  wrap_aax.cmake  wrap_auv2.cmake  wrap_clap.cmake  wrap_standalone.cmake  wrap_vst3.cmake  wrap_wclap_emscripten.cmake  wrapper_functions.cmake
include/clapwrapper/: auv2.h  vst3.h
libs/CLI11/: README.md
libs/fmt/: README.md
libs/psl/: README.md
libs/psl/presonus-plugin-extensions/: ipslgainreduction.h
src/: clap_proxy.cpp  clap_proxy.h  nomain.cpp  wramain.cpp  wrapasaax.cpp  wrapasaax.h  wrapasauv2.cpp  wrapasstandalone.cpp  wrapasstandalone_win32.cpp  wrapasstandalone_windows.cpp  wrapasvst3.cpp  wrapasvst3.h  wrapasvst3_entry.cpp  wrapasvst3_export_entry.cpp  wrapasvst3_version.h
src/detail/: sha1.cpp  sha1.h
src/detail/aax/: plugview.cpp  plugview.h  process.cpp  process.h
src/detail/ara/: ara.h
src/detail/auv2/: auv2_base_classes.h  auv2_shared.h  auv2_shared.mm  base_classes.h  parameter.cpp  parameter.h  process.cpp  process.h  wrappedview.asinclude.mm  wrappedview.h  wrappedview.mm
src/detail/auv2/build-helper/: auv2_infoplist_top.in  build-helper.cpp
src/detail/clap/: automation.h  fsutil.cpp  fsutil.h  mac_helpers.mm
src/detail/os/: fs.h  linux.cpp  log.h  macos.mm  osutil.h  osutil_windows.h  windows.cpp
src/detail/shared/: fixedqueue.h  sha1.cpp  spinlock.h
src/detail/standalone/: entry.cpp  entry.h  standalone_details.h  standalone_host.cpp  standalone_host.h  standalone_host_audio.cpp  standalone_host_midi.cpp
src/detail/standalone/linux/: gtkutils.cpp  gtkutils.h
src/detail/standalone/macos/: AppDelegate.h  AppDelegate.mm  Info.plist.in  MainMenu.xib  StandaloneFunctions.mm
src/detail/standalone/windows/: helper.h  helpers.cpp  helpers.h  host_window.cpp  host_window.h  settings_window.cpp  settings_window.h  standalone.manifest  win32.manifest  windows_standalone.cpp  windows_standalone.h  winutils.cpp  winutils.h
src/detail/vst3/: aravst3.h  categories.cpp  categories.h  parameter.cpp  parameter.h  plugview.cpp  plugview.h  process.cpp  process.h  state.h
src/detail/vst3/os/: linux.cpp  macos.mm  osutil.h  windows.cpp
tests/: CMakeLists.txt
tests/clap-first-example/: CMakeLists.txt  distortion_clap.cpp  distortion_clap_entry.cpp  distortion_clap_entry.h
